Approaches and approach trending metrics, great vs bad rate metric, Approach Category binning via separate class, Some refactoring across Round/Hole/Shot stream, equality method on Lie